[package]
name = "klingt"
version = "0.1.0"
authors = ["Devin Brite <devin@dwbrite.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = []

[dependencies]
cpal = { version = "0.15.3" }
lewton = "0.10.2"
dasp_graph = { version = "0.11.0", features = ["node-sum"]}
rtrb = "0.3.1"
petgraph = "0.5.1"
delegate = "0.13.0"
tracing = "0.1.40"
tracing-subscriber = "0.3.18"

enum_delegate = "0.2.0"

[dev-dependencies]
clang-sys = "1.8.1"
criterion = "0.5.1"
dasp_signal = { version = "0.11.0", features = [] }
dasp_sample = "0.11.0"
dasp_interpolate = {  version = "0.11.0", features = ["linear"] }
tracing = "0.1.40"
tracing-subscriber = "0.3.18"

[[bench]]
name = "node_benchmarks"
harness = false

[[example]]
name = "custom_dispatch"
required-features = []

