[package]
name = "klingt"
version = "0.3.0"
authors = ["Devin Brite <devin@dwbrite.com>"]
edition = "2018"

description = "klingt audio graph library?"
license = "MIT"


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = []
cpal_sink = ["std"]
vorbis_src = ["std"]
std = []  # optional, even if std is implicit
warn_on_empty = []

[dependencies]
cpal = { version = "0.15.3", features = ["wasm-bindgen"] }
lewton = "0.10.2"
dasp_graph = { version = "0.11.0", features = ["node-sum"]}
rtrb = "0.3.1"
petgraph = "0.5.1"
delegate = "0.13.0"
tracing = "0.1.40"
tracing-subscriber = "0.3.18"

enum_delegate = "0.2.0"
itertools = "0.14.0"
hashbrown = "0.15"

[dev-dependencies]
clang-sys = "1.8.1"
criterion = "0.5.1"
dasp_signal = { version = "0.11.0", features = [] }
dasp_sample = "0.11.0"
dasp_interpolate = {  version = "0.11.0", features = ["linear", "sinc"] }
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
itertools = "0.13.0"
dasp_ring_buffer = "0.11.0"
dasp_frame = "0.11.0"
symphonium = { version = "0.6.5", default-features = false, features = ["ogg", "vorbis", "wav", "pcm", "mp3", "flac"] }


[[bench]]
name = "node_benchmarks"
harness = false

[[example]]
name = "simple_sine"
required-features = ["cpal_sink"]

[[example]]
name = "audio_player"
required-features = ["cpal_sink"]
